# dynamic-coverage-badge

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
tests/: test_main.py
