[tool.poetry]
name = "dynamic-coverage-badge"
version = "0.0.1"
description = "Auto-updating coverage badge for README"
authors = ["David Bossanyi"]

[tool.poetry.dependencies]
python = "^3.10, <3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.981"
coverage = "^6.5.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "integration",
]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.coverage.run]
omit = ["tests/*"]
